--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -16,7 +16,7 @@
                 <div class="card-body">
                     <h1 class="text-center"><span class="fa fa-sign-in"></span>Login</h1>
                     
-                    <% if (massage.lenght > 0) { %>
+                    <% if (massage.length > 0) { %>
                     <div class="alert alert-danger"><%= massage %></div>
                     <% } %>
                     
