--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 
-<body class="login">
+<body>
     <div class="container">
         <div class="col-md-8 mx-auto">
             <div class="card mt-5">
                 <div class="card-body">
                     <h1 class="text-center"><span class="fa fa-sign-in"></span>Registrar</h1>
                     
-                    <% if (massage.lenght > 0) { %>
+                    <% if (massage.length > 0) { %>
                     <div class="alert alert-danger"><%= massage %></div>
                     <% } %>
                     
